# howToOrgCppProj

./: .gitignore  .gitmodules  CMakeLists.txt  README.rd
.github/: FUNDING.yml
cmake/: FindGTest.cmake  FindHowToOrgCppProj.cmake  FindOurBoost.cmake  FindSetCfg.cmake  FindSetVersions.cmake  HowToOrgCppProj.cmake  helper_macros.cmake
doc/learnCMake/: CMakeLists.txt
doc/learnCMake/cmake/: FindMyMatab.cmake  FindMyMatlab.cmake  helper_funcs.cmake  helper_macros.cmake
pkg/: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app1/: CMakeLists.txt
src/app1/src/: main.cpp
src/app2/: CMakeLists.txt
src/app2/src/: main.cpp
src/libCapture/: CMakeLists.txt
src/libCapture/include/: Cap1.h  Cap2.h
src/libCapture/src/: Cap1.cpp  Cap2.cpp
src/libCapture/test/: CMakeLists.txt
src/libCapture/test/src/: main.cpp  test1.cpp  test2.cpp
src/libExecutable/include/: CfgExe.h  Executable.h
src/libExecutable/src/: CfgExe.cpp  Executable.cpp
src/libExecutable/test/: CfgToRunTask.h  Task.cpp  Task.h  main.cpp
src/libLog/: CMakeLists.txt  README.md
src/libLog/include/: AppLog.h
src/libLog/src/: AppLog.cpp
src/libLog/test/: CMakeLists.txt  YourClass.cpp  YourClass.h  main.cpp
src/libProcess/: CMakeLists.txt
src/libProcess/include/: Proc1.h  Proc2.h
src/libProcess/src/: Proc1.cpp  Proc2.cpp
src/libUtil/: CMakeLists.txt
src/libUtil/include/: AppBagRead.h  AppBagWrite.h  AppCpuTimeProf.h  AppDefs.h  AppEnums.h  AppMeanStd.h  AppRng.h  AppTicToc.h  CapImg.h  CvUtilFuncs.h  HealthyMonitor.h  LinSpace.h  Roi.h  Uint8Stream.h  UtilFuncs.h  util.h
src/libUtil/src/: AppBagRead.cpp  AppBagWrite.cpp  CRC.cpp  CapImg.cpp  CvUtilFuncs.cpp  FileUtil.cpp  Roi.cpp  Uint8Stream.cpp  UtilFuncs.cpp
